<resources>
    <string name="felt_temp">体感温度</string>
    <string name="humidity">湿度</string>
    <string name="wind">风向风力</string>
    <string name="uv_index">紫外线指数</string>
    <string name="dressing_index">穿衣指数</string>
    <string name="information">详细信息</string>
    <string name="pm2.5">PM2.5</string>
    <string name="default_text">= =</string>
    <string name="title_city">选择城市</string>

    <string name="today">今天</string>
    <string name="forecast">预报</string>
    <string name="test_city">武汉</string>
    <string name="app_name">ybweather</string>
</resources>
