<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipeLayout"
    android:background="@color/colorPrim"
    tools:context="cn.iyuboi.ybweather.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="8dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <RelativeLayout
            android:id="@+id/rl_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_city"
                android:text="@string/default_text"
                android:textColor="@color/text_color"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_toRightOf="@+id/tv_city"
                android:layout_alignBottom="@id/tv_city"
                android:layout_alignTop="@id/tv_city"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"
                />

        </RelativeLayout>

        <TextView
            android:text="@string/default_text"
            android:id="@+id/tv_release"
            android:textColor="@color/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:layout_marginBottom="16dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            >
            <ImageView
                android:id="@+id/iv_now_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d00" />
            <TextView
                android:text="@string/default_text"
                android:id="@+id/tv_now_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:textColor="@color/text_color"/>
        </LinearLayout>
        <TextView
            android:text="@string/default_text"
            android:id="@+id/tv_today_temp"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp">
            <TextView
                android:text="@string/default_text"
                android:id="@+id/tv_now_temp"
                android:textColor="#000000"
                android:layout_weight="1"
                android:textSize="48sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/wireframe_light"
                android:orientation="vertical">
                <TextView
                    android:textColor="@color/text_color"
                    android:text="@string/pm2.5"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_aqi"
                        android:text="@string/default_text"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_quality"
                        android:text="@string/default_text"
                        android:layout_marginLeft="20dp"
                        android:ems="5"
                        android:layout_width="33dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/wireframe_dark"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:layout_marginBottom="4dp"
                android:text="@string/forecast"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_next_three"
                    style="@style/TextViewStyle" />
                <TextView
                    android:id="@+id/tv_next_six"
                    style="@style/TextViewStyle" />
                <TextView
                    android:id="@+id/tv_next_nine"
                    style="@style/TextViewStyle" />
                <TextView
                    android:id="@+id/tv_next_twelve"
                    style="@style/TextViewStyle" />
                <TextView
                    android:id="@+id/tv_next_fifteen"
                    style="@style/TextViewStyle"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_next_three"
                    style="@style/ViewStyle"
                    android:src="@drawable/d00"/>
                <ImageView
                    android:id="@+id/iv_next_six"
                    style="@style/ViewStyle"
                    android:src="@drawable/d00"/>
                <ImageView
                    android:id="@+id/iv_next_nine"
                    style="@style/ViewStyle"
                    android:src="@drawable/d00"/>
                <ImageView
                    android:id="@+id/iv_next_twelve"
                    style="@style/ViewStyle"
                    android:src="@drawable/d00"/>
                <ImageView
                    android:id="@+id/iv_next_fifteen"
                    style="@style/ViewStyle"
                    android:src="@drawable/d00"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_next_three1"
                    style="@style/TextViewStyle"
                    android:text="@string/default_text"/>
                <TextView
                    android:id="@+id/tv_next_six1"
                    style="@style/TextViewStyle"
                    android:text="@string/default_text"/>
                <TextView
                    android:id="@+id/tv_next_nine1"
                    style="@style/TextViewStyle"
                    android:text="@string/default_text"/>
                <TextView
                    android:id="@+id/tv_next_twelve1"
                    style="@style/TextViewStyle"
                    android:text="@string/default_text"/>
                <TextView
                    android:id="@+id/tv_next_fifteen1"
                    style="@style/TextViewStyle"
                    android:text="@string/default_text"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_weight="3"
                    android:gravity="left"
                    android:paddingLeft="20dp"
                    android:text="今天" />

                <ImageView
                    android:id="@+id/iv_today_weather"
                    style="@style/ViewStyle"
                    android:layout_weight="4"
                    android:src="@drawable/d00" />

                <TextView
                    android:id="@+id/tv_today_temp_a"
                    style="@style/TextViewStyle"
                    android:layout_weight="4" />

                <TextView
                    android:id="@+id/tv_today_temp_b"
                    style="@style/TextViewStyle"
                    android:layout_weight="4" />
            </LinearLayout>

            <View
                android:background="@drawable/wireframe_dark"
                android:layout_width="match_parent"
                android:layout_height="1px"/>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_tomorrow"
                    style="@style/TextViewStyle"
                    android:layout_weight="3"
                    android:paddingLeft="20dp"
                    android:gravity="left"/>

                <ImageView
                    android:id="@+id/iv_tomorrow_weather"
                    style="@style/ViewStyle"
                    android:layout_weight="4"
                    android:src="@drawable/d00"/>
                <TextView
                    android:id="@+id/tv_tomorrow_temp_a"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"/>
                <TextView
                    android:id="@+id/tv_tomorrow_temp_b"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"/>
            </LinearLayout>
            <View
                android:background="@drawable/wireframe_dark"
                android:layout_width="match_parent"
                android:layout_height="1px"/>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_third"
                    style="@style/TextViewStyle"
                    android:layout_weight="3"
                    android:paddingLeft="20dp"
                    android:gravity="left"/>

                <ImageView
                    android:id="@+id/iv_third_weather"
                    style="@style/ViewStyle"
                    android:layout_weight="4"
                    android:src="@drawable/d00"/>
                <TextView
                    android:id="@+id/tv_third_temp_a"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"/>
                <TextView
                    android:id="@+id/tv_third_temp_b"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"/>
            </LinearLayout>
            <View
                android:background="@drawable/wireframe_dark"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_fourth"
                    style="@style/TextViewStyle"
                    android:layout_weight="3"
                    android:paddingLeft="20dp"
                    android:gravity="left"/>

                <ImageView
                    android:id="@+id/iv_fourth_weather"
                    style="@style/ViewStyle"
                    android:layout_weight="4"
                    android:src="@drawable/d00"/>
                <TextView
                    android:id="@+id/tv_fourth_temp_a"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"/>
                <TextView
                    android:id="@+id/tv_fourth_temp_b"
                    style="@style/TextViewStyle"
                    android:layout_weight="4"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/wireframe_dark"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:layout_marginBottom="4dp"
                android:text="@string/information"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="锻炼指数"
                    android:gravity="left"
                    android:paddingLeft="16dp"
                    style="@style/TextViewStyle" />
                <TextView
                    android:id="@+id/tv_felt_temp"
                    android:text="@string/default_text"
                    android:gravity="left"
                    android:paddingLeft="16dp"
                    style="@style/TextViewStyle" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/humidity"
                    android:gravity="left"
                    android:paddingLeft="16dp"
                    style="@style/TextViewStyle" />
                <TextView
                    android:id="@+id/tv_humidity"
                    android:text="@string/default_text"
                    android:gravity="left"
                    android:paddingLeft="16dp"
                    style="@style/TextViewStyle" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/wind"
                    android:gravity="left"
                    android:paddingLeft="16dp"
                    style="@style/TextViewStyle" />
                <TextView
                    android:id="@+id/tv_wind"
                    android:text="@string/default_text"
                    android:gravity="left"
                    android:paddingLeft="16dp"
                    style="@style/TextViewStyle" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/uv_index"
                    android:gravity="left"
                    android:paddingLeft="16dp"
                    style="@style/TextViewStyle" />
                <TextView
                    android:id="@+id/tv_uv_index"
                    android:text="@string/default_text"
                    android:gravity="left"
                    android:paddingLeft="16dp"
                    style="@style/TextViewStyle" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/dressing_index"
                    android:gravity="left"
                    android:paddingLeft="16dp"
                    style="@style/TextViewStyle" />
                <TextView
                    android:id="@+id/tv_dressing_index"
                    android:text="@string/default_text"
                    android:gravity="left"
                    android:paddingLeft="16dp"
                    style="@style/TextViewStyle" />
            </LinearLayout>

    </LinearLayout>

    </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>